== 0.1.6

* wait method is added along with returned GPhoto2::CameraEvent class.
  needed when capturing images manually while still connected through USB

== 0.1.5

* GPhoto2::Camera.ports now returns only ports with cameras and
  doesn't return empty array if there is one camera connected.

== 0.1.4

* Added option to download first and last files with save method

== 0.1.3

* Added "delete file from camera" function
* Directive :type and class constant to determine config type
* "Configs" is now "config" (method name change)
* Configs are now cached in instance variable
* Added config_merge method
* ProgrammerError removed
* Removed allowed values check. Values just dont change instead of raising Errors

== 0.1.2

* Had to change version number to make gem build
* 'Save' function can accept options. See rdoc
* Gemspec made safer

== 0.1.1

* Added rdoc comments
* Added saving captured image to specified folder
* Added folders browsing
* Added folders and files listing

== 0.1.0

* Initial import
* Camera configuration (limited to radio-button and float type of items)
* Camera capture image command